<resources>
    <string name="app_name">Reminder</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="today">Hoy</string>
    <string name="All">Todos</string>
    <string name="settings">Ajustes</string>
    <string name="title">Titulo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab et non distinctio molestiae.</string>
    <string name="hoy_10_20_am">Hoy, 10:20 am</string>
    <string name="title_activity_new_event_activivty">New Event</string>
    <string name="new_event">Agregar evento</string>
    <string name="done">Hecho</string>
    <string name="description">Descripcion</string>
    <string name="About">Acerca de</string>
    <string name="todo">TODO</string>
    <string name="add_a_new_event_text">Agrega un nuevo recordatorio presionando el boton flotante</string>
    <string name="color">Color</string>
    <string name="add_a_title">Title is required</string>
    <string name="no_events">Sin Eventos</string>
    <string name="channel_name" />
    <string name="channel_description" />
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>