<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:backgroundTint="@color/white">

        <View
            android:id="@+id/status_indicator"
            android:layout_width="6dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:background="@color/event_green"
            android:backgroundTint="@color/event_green"
            app:layout_constraintBottom_toTopOf="@+id/event_item_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/event_item_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />

        <TextView
            android:id="@+id/event_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0.3"
            android:fontFamily="@font/rubik_light"
            android:text="@string/hoy_10_20_am"
            android:textAlignment="textEnd"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_item_title"
            android:layout_width="321dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.7"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_item_date" />

        <TextView
            android:id="@+id/event_item_desc"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:minLines="3"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_item_title"
            app:layout_constraintVertical_bias="0.058" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>