<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:counterTextColor="@color/primary_text"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        app:counterEnabled="true"
        app:counterMaxLength="300"
        app:counterTextColor="@color/primary_text"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/color_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:text="@string/color"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/Widget.AppCompat.EditText"
        android:textColor="#404040"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:rippleColor="@color/ripple" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:background="@color/divider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="16dp"
        android:text="Notify"
        app:switchPadding="15dp"
        app:thumbTextPadding="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:helperText="DD/MM/AAAA">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="Date"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>